runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__ChunkDbStats-75220100-75220101.s0.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
apply_transactions shard_id=0 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
  GET   288 State  

apply_transactions shard_id=0 block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
  GET   346 State  

top-level:
  GET   4 Block  4 BlockHeader  2 BlockHeight  4 BlockInfo  2 BlockMisc  2 ChunkExtra  2 Chunks  4 EpochInfo  2 IncomingReceipts  2 State  


