runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__GasCharges-75220100-75220101.s0.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
     475 free gets with total size of     2930417
     187 charged gets with total size of    29606
  71.75% of gets uncharged
  99.00% of gets total size uncharged

