runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__GasCharges-75220100-75220101.s1.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
      30 free gets with total size of      140837
       0 charged gets with total size of        0
 100.00% of gets uncharged
 100.00% of gets total size uncharged

